--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 24
     buildToolsVersion "24.0.0"
     defaultConfig {
-        applicationId "ru.dmitriev.squareorderedlayout"
+        applicationId "ru.dmitriev.areaorderedlayout"
         minSdkVersion 15
         targetSdkVersion 24
         versionCode 1
